<resources>
    <string name="app_name">兴趣班</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="me_jg_kcgl_kcmc">请输入课程名称，如钢琴课程</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="kengmu">科目</string>
    <string name="home">首页</string>
    <string name="community">社区</string>
    <string name="livebutton">直播</string>
    <string name="near">附近</string>
    <string name="find">发现</string>
    <string name="me">我</string>
    <string name="kemu">科目</string>
    <string name="quyu">区域</string>
    <string name="shaixuan">筛选</string>
    <string name="laoshi">老师</string>
    <string name="jigou">机构</string>
    <string name="login">帐号密码登录</string>
    <string name="register">注册</string>
    <string name="meishu">美术</string>
    <string name="shengyue">声乐</string>
    <string name="shufa">书法</string>
    <string name="wudao">舞蹈</string>
    <string name="qiyue">器乐</string>
    <string name="jianpan">键盘</string>
    <string name="more">更多</string>
    <string name="wushu">功夫</string>
    <string name="biaoyan">语言表演</string>
    <string name="my_order">我的订单</string>
    <string name="my_subject">我的课程</string>
    <string name="message_center">消息中心</string>
    <string name="my_comment">我的评论</string>
    <string name="my_fav">我的收藏</string>
    <string name="my_radio_broadcast">我的直播间</string>
    <string name="my_ques">我的问答</string>
    <string name="my_myactivity">我的活动</string>
    <string name="my_recrouse">资源管理</string>
    <string name="video_download">视频下载</string>
    <string name="i_am_teacher_organization">申请成为老师/机构</string>
    <string name="i_am_organization">机构管理</string>
    <string name="help_and_feedback">帮助与反馈</string>
    <string name="resource">资源</string>
    <string name="find_teachers">找老师</string>
    <string name="find_nearby">找附近的人(学生、老师、机构)</string>
    <string name="cancel">取消</string>
    <string name="screen">筛选</string>
    <string name="detail">详情</string>
    <string name="comment">评论</string>
    <string name="fogetpassword"><u>忘记密码?</u></string>
    <string name="please_input_your_phone_number">请输入您的手机号</string>
    <string name="please_input_your_Captcha">请输入您收到的验证码</string>
    <string name="please_input_password">请输入6-16位登录密码</string>
    <string name="please_input_password_again">请再次输入密码</string>
    <string name="test_register">注册</string>
    <string name="gain_captcha">获取验证码</string>
    <string name="i_have_agree_and_read">我已同意</string>
    <string name="user_agreement">兴趣班用户协议</string>
    <string name="live_agreement">《兴趣班用户直播协议》</string>
    <string name="my_wallet">我的钱包</string>
    <string name="balance">西唯的灵魂出窍</string>
    <string name="withdraw">提现</string>
    <string name="inpour">充值</string>
    <string name="topup_record">充值记录</string>
    <string name="my_interest_beans">我的兴趣豆</string>
    <string name="beans">兴 趣 豆</string>
    <string name="bind">绑定支付宝/微信</string>
    <string name="my_coupon">我的优惠券</string>
    <string name="yuan">元</string>
    <string name="my_beans">我的兴趣豆</string>
    <string name="my_beans2">我的兴趣豆:</string>
    <string name="have_signin">已经签到</string>
    <string name="success_of_signin">签到成功</string>
    <string name="day">天</string>
    <string name="signin">签到</string>
    <string name="please_write_inpour_money">请输入充值金额</string>
    <string name="select_method_of_inpour">选择充值方式</string>
    <string name="select_method_of_pay">选择支付方式</string>
    <string name="pay_of_WeChat">微信支付</string>
    <string name="pay_of_alipay">支付宝支付</string>
    <string name="recommend_use_WeChat">推荐已安装微信客户端的用户使用</string>
    <string name="recommend_use_alipay">推荐已安装支付宝的用户使用</string>
    <string name="compile">编辑</string>
    <string name="check_all">全选</string>
    <string name="delete">删除</string>
    <string name="delete_succese">删除成功</string>
    <string name="new_notification">系统通知</string>
    <string name="new_dynamic">每日动态</string>
    <string name="head_icon">修改头像</string>
    <string name="nickname">昵称</string>
    <string name="sex">性别</string>
    <string name="phone_number">联系人电话</string>
    <string name="password">密码</string>
    <string name="phone_account">手机号码</string>
    <string name="account_setting">帐号设置</string>
    <string name="password_setting">密码设置</string>
    <string name="course_setting">课程设置</string>
    <string name="log_out">退出当前登录</string>
    <string name="save">保存</string>
    <string name="fenhao">带""分号i</string>
    <string name="shurubushaoyu">输入少于22字符</string>
    <string name="shurubushaoyu_yibai">输入少于100字符</string>
    <string name="youxiujigou">优秀机构</string>
    <string name="youxiujigou_tuijian">排行榜</string>
    <string name="youxiulaoshi">优秀老师</string>
    <string name="jingpinkecheng">精品课程</string>
    <string name="me_kcjg_kccd_fz">课程长度(分钟)</string>
    <string name="me_kcjg_kccd_fz_shuru">请输入课时长度,如120</string>
    <string name="wangluoshipin">优秀问答</string>
    <string name="shuruname">请输入您的姓名</string>
    <string name="xuanzesex">请选择性别</string>
    <string name="wangluoshipin_tuijian">想你所想，答你所答</string>
    <string name="huodongzixun">信息平台</string>
    <string name="huodingzixun_tuijian">招生招聘信息市场</string>
    <string name="zhibotuijian">活动推荐</string>
    <string name="zhibotuijian_tuijian">热门活动报名入口</string>
    <string name="home_recyler_item_title">E加人瑜伽生活馆</string>
    <string name="men">男</string>
    <string name="women">女</string>
    <string name="find_teacher">找老师</string>
    <string name="find_resource">找`源</string>
    <string name="find_activitve_wenda">我的问答</string>
    <string name="find_activitve">找活动</string>
    <string name="find_live_radio">找直播</string>
    <string name="find_institution">找机构</string>
    <string name="please_write_word_of_search">请输入关键词</string>
    <string name="register_agreement">注册服务协议</string>
    <string name="versions">版本: 1.1.3</string>
    <string name="copyright">Copyright(©)2016 China Zhangju Corporation.All Right Reservrd.</string>
    <string name="camear_photo">拍照</string>
    <string name="select_from_phone_photo">从手机相册选择</string>
    <string name="attention">关注</string>
    <string name="coach">教师</string>
    <string name="fans">粉丝</string>
    <string name="post">帖子</string>
    <string name="group">群组</string>
    <string name="basic_message">基本信息</string>
    <string name="id_attestation">身份认证</string>
    <string name="organization_attestation">机构认证</string>
    <string name="platform_attestation">平台认证</string>
    <string name="organization_register">机构注册</string>
    <string name="status_attestation">资格认证</string>
    <string name="status_number">联系方式</string>
    <string name="look_more">查看更多</string>
    <string name="power_of_teachers">师资力量</string>
    <string name="click_look_more">点击查看更多》</string>
    <string name="excellent_works">优秀作品</string>
    <string name="environment_of_teach">教学环境</string>
    <string name="sure_inpour">确认充值</string>
    <string name="write_the_comment">写评价</string>
    <string name="course_plan">课程安排</string>
    <string name="intro_person">个人简介</string>
    <string name="teaching_show">教学展示</string>
    <string name="graduate_institutions">毕业院校</string>
    <string name="education_authentication">学历认证</string>
    <string name="of_school_age">"教龄\t\t  "</string>
    <string name="year">年</string>
    <string name="course_teache">授课科目</string>
    <string name="scope_of_train">培训范围</string>
    <string name="way_teach">授课方式</string>
    <string name="time_have_teached">已授课时</string>
    <string name="switch_city">切换城市</string>
    <string name="location_current">定位到的位置</string>
    <string name="all">全部</string>
    <string name="help_back">帮助与反馈</string>
    <string name="feedback">反馈</string>
    <string name="way_of_contact">联系方式</string>
    <string name="qq_mail_phone">QQ、邮箱、手机号码</string>
    <string name="feedback_suggest">反馈意见</string>
    <string name="send">发送</string>
    <string name="reset_password">重置密码</string>
    <string name="please_reset_password">请重置登录密码</string>
    <string name="commit">提交</string>
    <string name="no">否</string>
    <string name="yes">是</string>
    <string name="Network_load_failure">网络加载失败</string>
    <string name="please_login">用户未登录</string>
    <string name="is_hard_to_load">拼命加载中,请稍后......</string>
    <string name="anonymity_user">匿名用户</string>
    <string name="summary_can_not_null">内容不能为空</string>
    <string name="I_am_comment">我来评论...</string>
    <string name="more_setting">系统设置</string>
    <string name="about_us">关于我们</string>
    <string name="active_outline">活动概要</string>
    <string name="buy">购买</string>
    <string name="organization_site">机构地址</string>
    <string name="course_name">课程名称</string>
    <string name="total_prices">总价</string>
    <string name="xingquban_preferential_price">兴趣班优惠价</string>
    <string name="message_listening_test">试听消息</string>
    <string name="teach_time">授课时间</string>
    <string name="teach_time_of_order">授课时间:</string>
    <string name="number_of_start_course">开课人数</string>
    <string name="course_introduction">课程简介</string>
    <string name="course_descript">课程描述</string>
    <string name="teacher_of_teach">授课教师</string>
    <string name="shuru_teacher_of_teach">请输入授课教师,如五金</string>
    <string name="please_write_evaluate">请输入您的具体评价(140字以内)</string>
    <string name="star_of_evaluation">星级评价</string>
    <string name="evaluation">评价</string>
    <string name="people_of_nearby">附近的人</string>
    <string name="student">学生</string>
    <string name="enter_xingquban">入驻【兴趣班】</string>
    <string name="type">类型</string>
    <string name="organization_for_xingquban">兴趣班机构</string>
    <string name="teacher_for_xingquban">兴趣班家教</string>
    <string name="name">姓名</string>
    <string name="please_write">请输入法人姓名</string>
    <string name="shuru_name">请输入姓名</string>
    <string name="id_card">身份证号码</string>
    <string name="qualification_card">请输入证书名称</string>
    <string name="qualification">资格证书</string>
    <string name="teach_course">授课科目</string>
    <string name="class_site">授课地点</string>
    <string name="checking">正在审核中...</string>
    <string name="organization_name">机构名称</string>
    <string name="business_card">机构营业执照</string>
    <string name="contacts_name">法人姓名</string>
    <string name="legal_idcard_authentication">法人身份认证</string>
    <string name="business_license">营业执照</string>
    <string name="id_card_authentication">身份认证</string>
    <string name="teach_authentication">教师证</string>
    <string name="specialty_authentication">专业认证</string>
    <string name="site_of_activity">活动地点</string>
    <string name="time_of_activity">活动时间</string>
    <string name="specialty_of_activity">活动特色</string>
    <string name="notice_of_activity">活动须知</string>
    <string name="statement_of_activity">活动声明</string>
    <string name="line_of_activity">活动行程</string>
    <string name="please_write_old_password">请输入旧密码</string>
    <string name="please_write_password">请输入新密码</string>
    <string name="please_write_new_password">请输入6-16位新密码</string>
    <string name="age_of_teach">教龄:</string>
    <string name="teach_age">教龄</string>
    <string name="intro_of_organization">机构简介</string>
    <string name="more_of_course">更多课程</string>
    <string name="list_course">课程列表</string>
    <string name="buy_it_now">立即购买</string>
    <string name="orderform_of_confirm">确认订单</string>
    <string name="commit_of_orderform">提交订单</string>
    <string name="privilege_of_select">选择优惠</string>
    <string name="orderform_of_pay">支付订单</string>
    <string name="hint">提示</string>
    <string name="OK">确定</string>
    <string name="clear_the_cache">确定清楚缓存？</string>
    <string name="updata_new_versions">发现新版本, 是否更新?</string>
</resources>