<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center" >

    <LinearLayout
        android:layout_width="270dp"
        android:layout_height="119dp"
        android:background="@drawable/dialog_bg"
        android:orientation="vertical" >

        <TextView
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/updata_new_versions"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#dddddd" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/button1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/text_blue"
                android:textSize="18sp"
                android:text="@string/cancel" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#dddddd" />

            <TextView
                android:id="@+id/button2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/text_blue"
                android:textSize="18sp"
                android:text="@string/OK" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>