<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title"
        android:background="@color/white">

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/register"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/back"
            android:layout_width="@dimen/dp_20"
            android:layout_height="@dimen/dp_20"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_10"
            android:src="@mipmap/return_image" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="40dp">

                <EditText
                    android:id="@+id/phoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:background="@null"
                    android:hint="@string/please_input_your_phone_number"
                    android:paddingLeft="3dp"
                    android:textColor="#999999"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="@dimen/dp_20"
                    android:layout_height="@dimen/dp_20"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/dp_5"
                    android:src="@mipmap/zc_phone" />

                <View
                    android:id="@+id/View"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/phoneNumber"
                    android:layout_marginTop="@dimen/dp_10"
                    android:background="#dddddd" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="28dp">

                <EditText
                    android:id="@+id/Captcha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:ems="10"
                    android:hint="@string/please_input_your_Captcha"
                    android:paddingLeft="3dp"
                    android:textColor="#999999"
                    android:textSize="15sp">

                </EditText>

                <TextView
                    android:id="@+id/gainCaptcha"
                    android:layout_width="90dp"
                    android:layout_height="20dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginBottom="2dp"
                    android:background="@drawable/juxingbg_colorman_login"
                    android:gravity="center"
                    android:text="@string/gain_captcha"
                    android:textColor="#f65442"
                    android:textSize="12sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/Captcha"
                    android:layout_marginTop="@dimen/dp_10"
                    android:background="#dddddd" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="28dp">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:ems="10"
                    android:hint="@string/please_input_password"
                    android:paddingLeft="3dp"
                    android:password="true"
                    android:textColor="#999999"
                    android:textSize="15sp">

                </EditText>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/password"
                    android:layout_marginTop="@dimen/dp_10"
                    android:background="#dddddd" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="28dp">

                <EditText
                    android:id="@+id/confirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:ems="10"
                    android:hint="请在次输入密码"
                    android:paddingLeft="3dp"
                    android:password="true"
                    android:textColor="#999999"
                    android:textSize="15sp">

                </EditText>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/confirmPassword"
                    android:layout_marginTop="@dimen/dp_10"
                    android:background="#dddddd" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical">

                <CheckBox
                    android:id="@+id/agreed"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/cb_bg_agaree"
                    android:button="@null"
                    android:checked="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/i_have_agree_and_read"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/user_agreement"
                    android:textColor="@color/blue"
                    android:textSize="12sp" />

            </LinearLayout>

            <Button
                android:id="@+id/commit"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="53dp"
                android:background="@drawable/button_bg_red"
                android:text="@string/test_register"
                android:textColor="#ffffff"
                android:textSize="18sp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
